bugfix list: background image, bg image loading first, gaps between sections, gallery disappearing on screen resize -- and started services section and page

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 html,body{
-  background-image: url('../public/nails6.png');
+  /* background-image: url('../public/nails6.png');
   background-repeat:no-repeat;
-  background-size: cover;
+  background-size: cover; */
   height: 100%;
   overflow-x:hidden;
 }
@@ -16,7 +16,14 @@ html,body{
   animation-iteration-count: 1;
   z-index: 2;
 }
-
+.homepage{
+  display:flex;
+  flex-direction:column;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 @keyframes fadeInAnimation {
   0% {
       opacity: 0;
@@ -29,13 +36,27 @@ html,body{
   /* animation: delayBackground ease 3s;
   animation-iteration-count: 1;
   animation-delay:3s; */
+  position:fixed;
   background-image: url('../public/nails6.png');
   background-repeat:no-repeat;
   background-size: cover;
-  height: 100%;
-  width: 100%;
+  min-height: 100vh;
+  min-width: 100vh;
   margin: 0;
   padding: 0;
+  z-index: -1;
+}
+#forefront{
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
+#bodyContent2{
+  display:flex;
+  justify-content: center;
+  background-color: lightgrey;
+
+
 }
 @keyframes delayBackground{
   0% {
@@ -81,14 +102,19 @@ html,body{
 #rightBodyCarousel{
   display: flex;
   justify-content: center;
-  width: 40%;
+  width: 70%;
   height: 70%;
+  min-width: 200px;
+  min-height: 300px;
+  border: 10px solid lightgrey;
+  border-radius: 10px;
 }
 @media (max-width:700px){
   #bodyContent{
     display:flex;
     flex-direction:column;
     padding: 50px 20px;
+    margin-top: -5px;
   }
   #leftBodyLogo{
     justify-content:center;
